@@ -1,17 +1,22 @@
-noinst_HEADERS = MCSdiagexplPlugin.h \
-                 InputConverter.h \
+LIBLDLVHEXMCSDIAGEXPL_HDRS = \
+		 BaseContextAtom.h \
+		 ACC_ContextAtom.h \
+		 ContextInterfaceAtom.h \
+		 BaseContextPlugin.h \
+		 ContextInterfacePlugin.h
+
+pkginclude_HEADERS = $(LIBLDLVHEXMCSDIAGEXPL_HDRS)
+
+noinst_HEADERS = \
+		 MCSdiagexplPlugin.h \
+		 InputConverter.h \
 		 InputParserDriver.h \
 		 BridgeRule.h \
 		 BridgeRuleEntry.h \
 		 ParseContext.h \
-		 ACC_ContextAtom.h \
 		 DLV_ASP_ContextAtom.h \
-                 OutputRewriter.h \
+		 OutputRewriter.h \
 		 EquilibriumPrintVisitor.h \
 		 DiagExplPrintVisitor.h \
-		 BaseContextAtom.h \
-		 BaseContextPlugin.h \
-		 ContextInterfaceAtom.h \
-		 ContextInterfacePlugin.h \
 		 Timing.h \
 		 Global.h
