@@ -1,3 +1,7 @@
+2010-07-20  Peter Schueller <ps@kr.tuwien.ac.at>
+
+	* Installing headers required to create custom context plugins.
+
 2010-07-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	Release version 1.7.1.
